--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <img id="enemy_spider_big" src="assets/enemy_spider_big.png">
 <img id="fire" src="assets/fire.png">
 <img id="collisionAnimation" src="assets/boom.png">
+<img id="lives" src="assets/lives.png">
 
 <script type="module" src="main.js"></script>
 </body>
